--- a/gradle.properties
+++ b/gradle.properties
@@ -15,10 +15,11 @@ platformVersion = 2022.2
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = org.jetbrains.kotlin
+platformPlugins =
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 7.5.1
+javaVersion = 11
 
 # Opt-out flag for bundling Kotlin standard library -> https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library
 # suppress inspection "UnusedProperty"
