--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -92,5 +92,9 @@
                 id="com.paulpanther.intellijsqueak.actions.RefreshFileAction"
                 class="com.paulpanther.intellijsqueak.actions.RefreshFileAction"
                 text="Refresh File"/>
+        <action
+                id="com.paulpanther.intellijsqueak.actions.RenameFileAction"
+                class="com.paulpanther.intellijsqueak.actions.RenameFileAction"
+                text="Rename File"/>
     </actions>
 </idea-plugin>
