Add GotoClass Contributor

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -72,6 +72,8 @@
                 parentId="tools"
                 instance="com.paulpanther.intellijsqueak.settings.SqueakToolsConfigurable"
                 displayName="Squeak/ Smalltalk"/>
+        <gotoClassContributor
+                implementation="com.paulpanther.intellijsqueak.editor.SmalltalkGotoClassContributor"/>
     </extensions>
     <actions>
         <group
