--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -82,6 +82,13 @@
                 text="File System Actions"
                 popup="true">
         </group>
+        <group
+                id="Smalltalk.EditClassVariablesGroup"
+                text="Edit Class Variables">
+            <action
+                    id="Smalltalk.AddClassVariableAction"
+                    class="com.paulpanther.intellijsqueak.actions.AddClassVariableAction" />
+        </group>
         <action
                 id="com.paulpanther.intellijsqueak.actions.NewFileAction"
                 class="com.paulpanther.intellijsqueak.actions.NewFileAction"
@@ -94,13 +101,9 @@
                 id="com.paulpanther.intellijsqueak.actions.RefreshFileAction"
                 class="com.paulpanther.intellijsqueak.actions.RefreshFileAction"
                 text="Refresh File"/>
-    <action
-            id="com.paulpanther.intellijsqueak.actions.RenameFileAction"
-            class="com.paulpanther.intellijsqueak.actions.RenameFileAction"
-            text="Rename File"/>
-    <action
-            id="com.paulpanther.intellijsqueak.actions.OpenClassAction"
-            class="com.paulpanther.intellijsqueak.actions.OpenClassAction"
-            text="Edit Class"/>
+        <action
+                id="com.paulpanther.intellijsqueak.actions.RenameFileAction"
+                class="com.paulpanther.intellijsqueak.actions.RenameFileAction"
+                text="Rename File"/>
     </actions>
 </idea-plugin>
