Add Class Reference

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -73,7 +73,9 @@
                 instance="com.paulpanther.intellijsqueak.settings.SqueakToolsConfigurable"
                 displayName="Squeak/ Smalltalk"/>
         <fileEditorProvider
-                implementation="com.paulpanther.intellijsqueak.editor.ClassFileEditorProvider" />
+                implementation="com.paulpanther.intellijsqueak.editor.ClassFileEditorProvider"/>
+        <gotoClassContributor
+                implementation="com.paulpanther.intellijsqueak.editor.SmalltalkGoToClassContributor"/>
     </extensions>
     <actions>
         <group
@@ -87,7 +89,7 @@
                 text="Edit Class Variables">
             <action
                     id="Smalltalk.AddClassVariableAction"
-                    class="com.paulpanther.intellijsqueak.actions.AddClassVariableAction" />
+                    class="com.paulpanther.intellijsqueak.actions.AddClassVariableAction"/>
         </group>
         <action
                 id="com.paulpanther.intellijsqueak.actions.NewFileAction"
